--- a/package.json
+++ b/package.json
@@ -6,6 +6,24 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
+    "lint": "eslint \"src/**/*.{js}\"",
+    "lint:staged": "lint-staged",
+    "lint:fix": "eslint --fix \"src/**/*.{js}\"",
+    "format:fix": "prettier --write \"src/**/*.{js}\"",
+    "format:staged": "pretty-quick --staged",
+    "precommit": "npm run format:staged && npm run format:fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint:fix && npm run precommit",
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js}": [
+      "eslint --fix \"src/**/*.{js}\"",
+      "prettier --write \"src/**/*.{js}\"",
+      "git add"
+    ]
   },
   "author": "Arch3rex",
   "license": "ISC",
@@ -14,7 +32,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.9"
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
+    "mongoose": "^5.10.9",
+    "prettier": "^2.1.2"
   },
   "devDependencies": {
     "eslint": "^7.11.0",
