changed tasks schema/sorted tasks

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,20 +5,12 @@
         "es2021": true
     },
     "extends": [
-        "plugin:react/recommended",
-        "airbnb"
+        "google"
     ],
     "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
         "ecmaVersion": 12
     },
-    "plugins": [
-        "react"
-    ],
     "rules": {
-        "no-underscore-dangle":"off",
-        "no-shadow":"off"
+        "new-cap":"off"
     }
 }
