--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     },
     "husky": {
       "hooks": {
-        "pre-commit": "npm run lint:fix && npm run precommit"
+        "pre-commit": "npm run lint:fix && npm run format:fix "
     }
   },
   "lint-staged": {
