--- a/package.json
+++ b/package.json
@@ -4,33 +4,34 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "test": "jest",
+    "start": "node index",
     "lint": "eslint \"src/**/*.{js,jsx}\"",
     "lint:fix": "eslint --fix \"src/**/*.{js,jsx}\"",
     "format:fix": "prettier --write \"src/**/*.{js,jsx}\"",
     "format:staged": "pretty-quick --staged",
     "precommit": "npm run format:staged && npm run format:fix"
-    },
-    "husky": {
-      "hooks": {
-        "pre-commit": "npm run lint:fix && npm run format:fix "
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint:fix && npm run format:fix "
     }
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
-      "eslint --fix \"src/**/*.{js,jsx}\"",
+      "eslint --fix \"src/**/*.{js}\"",
       "git add"
     ]
   },
-    
   "author": "Arch3rex",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "faker": "^5.1.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0",
     "mongoose": "^5.10.9",
@@ -46,6 +47,7 @@
     "husky": "^4.3.0",
     "prettier": "^1.15.3",
     "pretty-quick": "^1.8.0",
-    "lint-staged": "^10.4.0"
+    "lint-staged": "^10.4.0",
+    "jest": "^26.5.3"
   }
 }
