--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
@@ -36,6 +35,7 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0",
     "mongoose": "^5.10.9",
+    "morgan": "^1.10.0",
     "prettier": "^2.1.2"
   },
   "devDependencies": {
