--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test && jest",
-    "start": "node index",
+    "test": "cross-env NODE_ENV=test && jest --maxWorkers=1",
+    "start": "nodemon index",
     "lint": "eslint \"src/**/*.{js,jsx}\"",
     "lint:fix": "eslint --fix \"src/**/*.{js,jsx}\"",
     "format:fix": "prettier --write \"src/**/*.{js,jsx}\"",
@@ -27,15 +27,18 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^5.1.0",
     "husky": "^4.3.0",
+    "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.4.0",
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
+    "npm": "^6.14.8",
     "prettier": "^2.1.2"
   },
   "devDependencies": {
